--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+    gradle-test:
+      steps:
+        - run: gradle test --scan -s
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +27,4 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      - gradle-test
