--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+orbs:
+  gradle: circleci/gradle@3.0.0
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -17,9 +19,10 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-    gradle-test:
-      steps:
-        - run: gradle test --scan -s
+  gradle/test:
+    store_artifcats: build/reports
+    test_command: test
+    test_results_path: build/test-results/
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -27,4 +30,4 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
-      - gradle-test
+      - gradle/test
