--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,17 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-orbs:
-  gradle: circleci/gradle@3.0.0
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: cimg/openjdk:18.0.2
-    # Add steps to the job
-    # See: https: environment:
     steps:
       - checkout
       - run:
           name: "Say hello"
           command: chmod +x ./gradlew && ./gradlew build --scan -s
 
-# Invoke jobs via workflows
-# See: https://circle
 workflows:
-  checkout-build-test:
+  gradle-test:
     jobs:
       - say-hello
-        # ci.com/docs/2.0/configuration-reference/#workflows
